@@ -19,7 +19,8 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  * SOFTWARE.
  */
-package org.enginehub.discord.module.errorHelper;
+
+package org.enginehub.discord.module.errorhelper;
 
 import com.google.common.reflect.TypeToken;
 import net.dv8tion.jda.api.entities.Message;
@@ -36,13 +37,13 @@ import org.apache.logging.log4j.Logger;
 import org.enginehub.discord.EngineHubBot;
 import org.enginehub.discord.module.LinkGrabber;
 import org.enginehub.discord.module.Module;
-import org.enginehub.discord.module.errorHelper.resolver.ErrorResolver;
-import org.enginehub.discord.module.errorHelper.resolver.GhostbinResolver;
-import org.enginehub.discord.module.errorHelper.resolver.GistResolver;
-import org.enginehub.discord.module.errorHelper.resolver.IncompatibleResolver;
-import org.enginehub.discord.module.errorHelper.resolver.MCLogsResolver;
-import org.enginehub.discord.module.errorHelper.resolver.RawSubdirectoryUrlResolver;
-import org.enginehub.discord.module.errorHelper.resolver.RawSubdomainUrlResolver;
+import org.enginehub.discord.module.errorhelper.resolver.ErrorResolver;
+import org.enginehub.discord.module.errorhelper.resolver.GhostbinResolver;
+import org.enginehub.discord.module.errorhelper.resolver.GistResolver;
+import org.enginehub.discord.module.errorhelper.resolver.IncompatibleResolver;
+import org.enginehub.discord.module.errorhelper.resolver.MCLogsResolver;
+import org.enginehub.discord.module.errorhelper.resolver.RawSubdirectoryUrlResolver;
+import org.enginehub.discord.module.errorhelper.resolver.RawSubdomainUrlResolver;
 import org.enginehub.discord.util.PasteUtil;
 
 import java.awt.image.BufferedImage;
@@ -50,13 +51,18 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -70,6 +76,9 @@ import javax.imageio.ImageIO;
 public class ErrorHelper extends ListenerAdapter implements Module {
 
     private static final Logger LOGGER = LogManager.getLogger();
+    private static final HttpClient HTTP_CLIENT = HttpClient.newBuilder()
+        .followRedirects(HttpClient.Redirect.NORMAL)
+        .build();
     private static final int LOG_SCAN_LIMIT = 1024 * 1024 * 50; // 50MB
 
     private final List<ErrorResolver> resolvers = List.of(
@@ -123,7 +132,7 @@ public class ErrorHelper extends ListenerAdapter implements Module {
                         + "to scan.").queue();
                     continue; //Ignore >10MB for now.
                 }
-                try(BufferedReader reader = new BufferedReader(new InputStreamReader(attachment.getProxy().download().get()))) {
+                try (BufferedReader reader = new BufferedReader(new InputStreamReader(attachment.getProxy().download().get(), StandardCharsets.UTF_8))) {
                     String line;
                     while ((line = reader.readLine()) != null) {
                         messageText.append(line).append('\n');
@@ -133,7 +142,7 @@ public class ErrorHelper extends ListenerAdapter implements Module {
                 }
 
                 try {
-                    PasteUtil.sendToPastebin(messageText.toString()).thenAccept(url -> {
+                    var _ = PasteUtil.sendToPastebin(messageText.toString()).thenAccept(url -> {
                         String responseUrl = url.toString();
                         if (attachment.getFileName().equals("report.txt")) {
                             responseUrl = responseUrl + ".report";
@@ -165,7 +174,7 @@ public class ErrorHelper extends ListenerAdapter implements Module {
     private static final Pattern REMOVE_CHARS = Pattern.compile("[\n\r \t’‘“”`\"']");
 
     private static String cleanString(String string) {
-        return REMOVE_CHARS.matcher(string.toLowerCase()).replaceAll("");
+        return REMOVE_CHARS.matcher(string.toLowerCase(Locale.ROOT)).replaceAll("");
     }
 
     private Stream<String> messagesForError(String error) {
@@ -186,10 +195,16 @@ public class ErrorHelper extends ListenerAdapter implements Module {
     private static String getStringFromUrl0(String url, int tries) {
         StringBuilder main = new StringBuilder();
 
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(new URL(url).openStream()))) {
-            String line;
-            while ((line = reader.readLine()) != null) {
-                main.append(line);
+        try {
+            HttpResponse<Stream<String>> response = HTTP_CLIENT.send(
+                HttpRequest.newBuilder(new URI(url)).build(),
+                HttpResponse.BodyHandlers.ofLines()
+            );
+            try (Stream<String> lines = response.body()) {
+                if (response.statusCode() >= 400) {
+                    throw new IOException("HTTP " + response.statusCode());
+                }
+                lines.forEach(main::append);
             }
         } catch (Throwable e) {
             LOGGER.warn("Failed to load URL " + url + " (Tries " + tries + ')', e);
